--- a/client/package.json
+++ b/client/package.json
@@ -17,19 +17,22 @@
     "coffee-script": "^1.10.0",
     "css-loader": "^0.14.5",
     "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
+    "file-loader": "^0.8.5",
+    "history": "^1.13.1",
     "jade": "^1.11.0",
     "jade-html-loader": "0.0.2",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.4.2",
     "path": "^0.11.14",
     "postcss-loader": "^0.5.1",
-    "react": "^0.13.3",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-router": "^1.0.0",
     "sass-loader": "^1.0.4",
     "style-loader": "^0.12.4",
     "superagent": "^1.4.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
