--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "cd client && npm install"
+    "postinstall": "cd client && npm install",
+    "build": "cd client && npm run build:rails"
   },
   "repository": {
     "type": "git",
